make all tests pass